<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">OS Bridge</string>
    <string name="version">Android app version 2012.0</string>
    
    <string name="about">About</string>
    <string name="author">This project was started by Peter Krenesky of the Oregon State University Open Source Lab, home of growing, high-impact open source communities: http://osuosl.org</string>
    <string name="label_contributors">Contributors:</string>
    <string name="contributors">Don Park, Sean Sullivan, Igal Koshevoy, Jacob Helwig and Ben Hengst</string>
    <string name="share_text">I\'m attending \"</string>
    <string name="share_text2">\&quot; #osbridge</string>
    <string name="share_subject">This session at OS Bridge was interesting</string>
    <string name="loading__tagline">The conference for open source citizens</string>
    <string name="loading__date_and_location">June 18 - 21, 2013 | Portland, Oregon</string>
    <string name="app_description">Schedule for the Open Source Bridge conference in Portland, Oregon.</string>
    
    <!-- Actions -->
    
    <string name="loading">Loading&#8230;</string>
    <string name="loading_speakers">Loading Speakers&#8230;</string>
    <string name="loading_tracks">Loading Tracks&#8230;</string>
    <string name="loading_events">Loading Events&#8230;</string>
    <string name="refreshing">Refreshing&#8230;</string>
    <string name="refreshing_speakers">Refreshing Speakers&#8230;</string>
    <string name="refreshing_tracks">Refreshing Tracks&#8230;</string>
    <string name="refreshing_events">Refreshing Events&#8230;</string>
    
    <string name="close">Close</string>
    
    <string name="no_error">No Error</string>
    <string name="speakers_not_downloaded">The speakers for this event haven\'t been downloaded yet</string>
    <string name="event_no_speakers">This event doesn\'t have any speakers</string>
    <string name="no_more_days">No more days</string>
    <string name="not_available">Not available</string>
    <string name="no_affiliation">No affiliation</string>
    
    <!-- Menu items -->
    
    <string name="refresh">Refresh</string>
    <string name="previousday">Previous Day</string>
    <string name="nextday">Next Day</string>
    <string name="now">Now</string>
    <string name="filter">Filter by Track</string>
    <string name="removefilter">Remove Filter</string>
    <string name="updated">Last updated</string>
    <string name="about">About</string>
    
    <!--Bio view labels -->
    
    <string name="twitter">Twitter:</string>
    <string name="website">Website:</string>
    <string name="blog">Blog:</string>
    <string name="identica">Identica:</string>
    
    <!-- Toast messages -->
    
    <string name="eventinfonotdownloaded">Event info not downloaded</string>
    <string name="confinfonotdownloaded">Conference info not downloaded</string>
    
    
    <!-- dialogs -->
    
    <string name="lastupdated">Last updated:</string>
    <string name="picktrack">Pick track:</string>
    <string name="lastupdated">Last updated:</string>
    
    
    
    
</resources>
