<LinearLayout 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:gravity="center"
    android:background="#FFF"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <ImageView
        android:id="@+id/logoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dip"
        android:src="@drawable/logo" />
    
    <TextView
        android:id="@+id/loadingTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:text="@string/loading__tagline"
        android:textColor="#222222"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/loadingDateLocation"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/loading__date_and_location"
        android:textColor="#08B9A6"
    />

    <TextView
        android:id="@+id/loadingVersion"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_marginTop="140dip"
        android:text="@string/version"
        android:textStyle="normal"
    />    
</LinearLayout>