<LinearLayout 
android:id="@+id/speaker_details"
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
>

     <TextView 
        android:id="@+id/name"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFF"
     />
     
     <TextView 
        android:id="@+id/affiliation"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
     />
     
     <LinearLayout 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:visibility="gone"
		>
		 <TextView 
		    android:text="@string/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#FFF"
		  />
	     <TextView 
	        android:id="@+id/twitter"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	     />
     </LinearLayout>
     <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >
         <TextView 
            android:text="@string/website"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#FFF"
          />
	     <TextView 
	        android:id="@+id/website"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	     />
     </LinearLayout>
     <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >
         <TextView 
            android:text="@string/blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#FFF"
          />
	     <TextView 
	        android:id="@+id/blog"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	     />
	 </LinearLayout>
     <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >
         <TextView 
            android:text="@string/identica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="#FFF"
          />
	     <TextView 
	        android:id="@+id/identica"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	     />
	 </LinearLayout>
     
     <TextView 
        android:id="@+id/biography"
        android:layout_width="wrap_content" 
        android:layout_height="0dip"
        android:layout_marginTop="15dp"
        android:layout_weight="100"
     />
     
</LinearLayout>